# OpencvApp

./: README.md  build.cmd  build.sh
src/: CMakeLists.txt  OpencvApp.cpp
